# DemophEngine

./: CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml
docs/: api-reference.md  getting-started.md
include/demoph/: demoph.h
include/demoph/core/: engine.h
include/demoph/math/: vec3.h
scripts/: engine_bindings.py
shaders/: basic.vert  pbr.frag
src/audio/: advanced_audio_engine.cpp  audio_engine.hpp
src/components/: camera.hpp  mesh.hpp  transform.hpp
src/core/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  system.hpp
src/particles/: advanced_particle_system.cpp
src/physics/: physics_engine.hpp
src/renderer/: advanced_renderer.cpp  renderer.hpp  shader.hpp
web/: engine_interface.js
