
[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.10.0", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "demoph-engine"
version = "1.0.0"
description = "Demoph Engine - Where Precision Meets Possibility"
authors = [{name = "Demoph Studios", email = "dev@demoph.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries :: Game Development",
]
keywords = ["game-engine", "graphics", "3d", "vulkan", "opengl", "physics", "audio"]

dependencies = [
    "pybind11>=2.10.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pygame>=2.5.0",
    "moderngl>=5.8.0",
    "pyrr>=0.10.3",
    "pyopengl>=3.1.6",
    "pyopengl-accelerate>=3.1.6",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "imageio>=2.31.0",
    "opencv-python>=4.8.0",
    "pyassimp>=4.1.6",
    "pywavefront>=1.3.3",
    "pyglet>=2.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "websockets>=11.0.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "watchdog>=3.0.0",
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "cmake>=4.0.3",
    "ninja>=1.11.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autoapi>=2.1.0",
]
performance = [
    "cython>=3.0.0",
    "numba>=0.57.0",
    "cupy>=12.0.0",
]

[project.scripts]
demoph = "demoph:main"
demoph-editor = "demoph.tools.editor:main"
demoph-profiler = "demoph.tools.profiler:main"

[project.urls]
Homepage = "https://demoph.com"
Documentation = "https://docs.demoph.com"
Repository = "https://github.com/demoph/engine"
"Bug Tracker" = "https://github.com/demoph/engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
